Fixes spacing of links in #utility-bar

--- a/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/campaign-template/sass/_drupal.sass
+++ b/sites/all/modules/dosomething/dosomething_campaign_styles/campaign_styles/2013/campaign-template/sass/_drupal.sass
@@ -120,6 +120,10 @@ header[role="banner"]
     font-size: 13px
     text-decoration: none
 
+// fix spacing of "help center" & "sign in" after search was hidden
+#help-center
+  margin: 3px 15px 3px 0
+
 // hide random Geocode Data field
 #edit-submitted-field-geocode-data
   display: none
@@ -138,9 +142,11 @@ header[role="banner"]
 #block-block-5
   display: none
 
+// set width of page content
 #cmp
   width: $section-wrapper-width
   margin: 0 auto
 
+// why is this here?
 .view-campaign-gallery #slideshow
   margin: 0 auto
